src/objects/CaseTrack__c.object
<CustomObject>
    <description>Used by case automation. Keeps track of automatic case creation objects.</description>
    <fields>
        <fullName>Object_Id__c</fullName>
        <description>Used by case automation</description>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>Used by case automation</description>
        <label>Object Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueId__c</fullName>
        <description>Used by case automation</description>
        <label>QueueId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CaseTrack</label>
    <nameField>
        <label>CaseTrack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CaseTracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>